# victoria-3-map-history-editor

./: LICENSE  README.md  dev-app-update.yml  electron-builder.yml  package.json  tailwind.config.js  tsconfig.web.json
electron/: main.js
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/migration/src/: lib.rs  m20250329_151825_create_countries.rs  m20250330_004503_create_states.rs  m20250330_050749_create_pops.rs  m20250330_141936_create_buildings.rs  m20250330_151648_create_country_ownerships.rs  m20250330_151656_create_building_ownerships.rs
src-tauri/src/: border_to_geojson_coords.rs  building.rs  building_definition.rs  cache_config.rs  color_converter.rs  country.rs  country_definition.rs  country_setup.rs  dds_to_png.rs  game_folder.rs  geo_converters.rs  get_countries.rs  get_state_buildings.rs  get_state_populations.rs  get_states.rs  get_uncreated_country_definitions.rs  legacy_country.rs  main.rs  main_menu.rs  merge_buildings.rs  merge_pops.rs  merge_states.rs  pdx_script_parser.rs  province_map_to_geojson.rs  save_as_pdx_script.rs  technology.rs  transfer_provinces.rs  transfer_state.rs
src-tauri/src/models/: building.rs  building_ownership.rs  country.rs  country_ownership.rs  mod.rs  pop.rs  state.rs
src/components/: Background.tsx  Countries.tsx  CreateCountry.tsx  Map.tsx  Provinces.tsx  States.tsx
src/components/form/: SearchBox.tsx
src/components/info/: AddStateBuilding.tsx  BuildingInfo.tsx  BuildingsInfo.tsx  (+8 more)
src/main/: index.ts
src/renderer/: index.html
(+1 files in other folders)
